--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,9 +1,5 @@
-include README.md
-include TODO
-include LICENSE
-include *.py
-exclude *.pyc
-include *.sh
-recursive-include tests *.py *.c *.txt *_list *.tmp
-recursive-exclude tests *.pyc
-recursive-exclude tests/logs *
+include LICENSE README.md TODO setup.py
+include misspellings
+include misspellings_lib.py
+recursive-include tests *.py *.txt *.c *_list
+recursive-include utils *
