--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
     - "2.7"
     - "3.2"
 install:
+    - pip install $(python setup.py --requires)
     - python setup.py install
 script:
     - python setup.py test
