--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
 include LICENSE README.rst TODO setup.py
 include misspellings
 include misspellings_lib.py
-recursive-include tests *.py *.txt *.c *_list
+recursive-include tests *.py *.txt *.c *_list *good_out
 recursive-include utils *
+recursive-exclude utils/travis *
