--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
     - "2.6"
     - "2.7"
     - "3.2"
+    - "pypy"
 install:
     - pip install --use-mirrors -r tests/travis/requirements-${TRAVIS_PYTHON_VERSION}.txt
     - python setup.py install
