--- a/.pylintrc
+++ b/.pylintrc
@@ -28,7 +28,7 @@ argument-rgx=[a-z_][a-z0-9_]{2,30}$
 # Note: s/2/1/ to allow two char var names.
 variable-rgx=[a-z_][a-z0-9_]{1,30}$
 inlinevar-rgx=[A-Za-z_][A-Za-z0-9_]*$
-good-names=i,j,k,ex,f,fn,a,b,Run,_
+good-names=i,j,k,ex,f,fn,Run,_,ms
 bad-names=foo,bar,baz,toto,tutu,tata
 no-docstring-rgx=__.*__
 
@@ -53,7 +53,7 @@ generated-members=REQUEST,acl_users,aq_parent
 
 [VARIABLES]
 init-import=no
-dummy-variables-rgx=_|dummy
+dummy-variables-rgx=_|dummy|unused
 additional-builtins=
 
 [CLASSES]
