Hash about string.
Some things in string are deprecated, but as far as I can tell, the
whole module isn't.

--- a/.pylintrc
+++ b/.pylintrc
@@ -74,7 +74,7 @@ min-public-methods=2
 max-public-methods=20
 
 [IMPORTS]
-deprecated-modules=regsub,string,TERMIOS,Bastion,rexec
+deprecated-modules=regsub,TERMIOS,Bastion,rexec
 import-graph=
 ext-import-graph=
 int-import-graph=
