Quick script to run pylint and coverage.
cq.sh runs both pylint and coverage.
Removed old reference to tests/travis from MANIFEST.in.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,5 @@
 include LICENSE README.rst TODO setup.py
 include misspellings
 include misspellings_lib.py
-recursive-include tests *.py *.txt *.c *_list *good_out
-recursive-exclude tests/travis *
+recursive-include tests *.py *.txt *.c *_list *good_out cq.sh
 recursive-include utils *
